# MORESCA

./: .gitignore  README.md  analysis_steps.py  environment.yml  generated_code.py  generator.py  parameters.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  template.py  utils.py
.github/workflows/: python-package.yml
MORESCA/: analysis_steps.py  config.gin  generator.py  main.py  parameters.yml  plotting.py  template.py  utils.py
MORESCA/pipeline/: __init__.py  batch_effect_correction.py  clustering.py  diff_gene_exp.py  feature_selection.py  is_outlier.py  load_data.py  neighborhood_graph.py  normalization.py  pca.py  plotting.py  quality_control.py  scaling.py  umap.py
MORESCA/tests/: test-config-faulty.gin  test-config.gin  test_analysis_steps.py  test_analysis_steps_no_gin.py  test_clustering.py  test_feature_selection.py  test_main.py  test_normalization.py  test_template.py  test_utils.py  test_validation.py
MORESCA/validation/: config_schema.py  config_validation.py
docs/files/: cli_usage.md  config_example.md  parameters.md
docs/source/: conf.py  index.md  installation.md  release_notes.md  usage.md
