[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moresca"
version = "0.1.0"
description = "Reproducible boilerplate-free workflow management for Scanpy-based scRNA-seq analysis."
license = { text = "AGPL-3.0 license" }
homepage = "https://github.com/claassenlab/MORESCA/"
requires-python = ">=3.10"


authors = [
  {email = "matthias.bruhns@posteo.de"},
  {name = "Matthias Bruhns"}
]

keywords = [
  "workflow management",
  "scRNA-seq",
  "reproducibility"
]

classifiers = [
        "Development Status :: 1 - Planning",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU Affero General Public License v3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Scientific/Engineering :: Bio-Informatics"
    ]

dependencies = [
    "scanpy==1.9.3",
    "doubletdetection==4.2",
    "harmonypy==0.0.9",
    "openpyxl==3.1.1",
    "anticor-features==0.2.0",
    "numpy==1.23",
    "gin-config==0.5.0",
    "loompy==3.0.7",
    "leidenalg==0.9.1",
    "igraph==0.10.4"
]

[project.optional-dependencies]
dev = [
    "black==23.1.0",
    "flake8==6.0.0",
    "pytest"
]

[tool.black]
line-length = 88
target-version = ["py310", "py311"]
include = '\.pyi?$'

[tool.pylint.format]
max-line-length = 88

[tool.pylint.MASTER]
# Specify a score threshold to be exceeded before program exits with error.
fail-under = "7.0"

# Add files or directories to the blacklist. They should be base names, not
# paths.
ignore = ".git"

# Add files or directories matching the regex patterns to the blacklist. The
# regex matches against base names, not paths.
ignore-patterns = ""

# Use multiple processes to speed up Pylint. Specifying 0 will auto-detect the
# number of processors available to use.
jobs = 0

# When enabled, pylint would attempt to guess common misconfiguration and emit
# user-friendly hints instead of false-positive error messages.
suggestion-mode = "yes"

# Allow loading of arbitrary C extensions. Extensions are imported into the
# active Python interpreter and may run arbitrary code.
unsafe-load-any-extension = "no"
[tool.pylint."MESSAGES CONTROL"]

# Only show warnings with the listed confidence levels. Leave empty to show
# all. Valid levels: HIGH, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = ''

# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once). You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = "fixme, missing-module-docstring, missing-function-docstring"