[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "moresca"
version = "0.1.0"
description = "Reproducible boilerplate-free workflow management for Scanpy-based scRNA-seq analysis."
license = { text = "AGPL-3.0 license" }
requires-python = ">=3.10"

authors = [
    { name = "Matthias Bruhns", email = "matthias.bruhns@posteo.de" },
    { name = "Jan Thomas Schleicher", email = "jan.schleicher@uni-tuebingen.de" },
]

keywords = ["workflow management", "scRNA-seq", "reproducibility"]

classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "scanpy==1.9.3",
    "doubletdetection==4.2",
    "harmonypy==0.0.9",
    "openpyxl==3.1.1",
    "anticor-features==0.2.0",
    "numpy==1.23",
    "gin-config==0.5.0",
    "loompy==3.0.7",
    "leidenalg==0.9.1",
    "igraph==0.10.4",
    "scikit-misc==0.1.4",
    "pynndescent>=0.5.10",
]

[project.optional-dependencies]
dev = ["ruff", "pytest"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
extend-select = ["I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = true

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

#SOURCE: https://stackoverflow.com/a/76739181
[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "MORESCA",
] # package names should match these glob patterns (["*"] by default)
exclude = [] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
moresca = "MORESCA.template:main"
