[metadata]
name = moresca
version = 0.1.0
author = Matthias Bruhns
author_email = matthias.bruhns@posteo.de
long_description = file: README.md
license = AGPL-3.0 license
keywords =
    workflow management
    scRNA-seq
    reproducibility

classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    scanpy==1.9.3
    doubletdetection==4.2
    harmonypy==0.0.9
    openpyxl==3.1.1
    anticor-features==0.2.0
    numpy==1.23
    gin-config==0.5.0
    loompy==3.0.7
    leidenalg==0.9.1
    igraph==0.10.4

[options.extras_require]
dev = 
    black==23.1.0
    flake8==6.0.0
    pylint==2.17.0
    pytest==7.2.2